Sidebar - Fix regression in sidebar and made gray darker on mobile dropdown

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -13,7 +13,7 @@
   --ifm-color-primary-lightest: #ffac99;
   --ifm-code-font-size: 95%;
 
-  --ifm-hover-overlay: #f8f8f8;
+  --ifm-hover-overlay: #d9d9d9;
 
   --ifm-menu-color: variables.$mina-black;
   --ifm-breadcrumb-item-background-active: none;
